# simtown

./: .env.example  .gitignore  .prettierrc  Dockerfile  README.md  bun.lockb  docker-compose.yml  index.html  package.json  vite.config.ts
.github/workflows/: build-and-deploy.yml
assets/: map.json  simple-pack.json
assets/maps/: simple-map.json
public/assets/maps/: elections.json  electiontown.json  hogwart.json  hogwarts_great_hall.json  simple-map.json
scrapper/: pyproject.toml
scrapper/scrapper/: ai-town_stargazers.csv  generative_agents_forkers.csv  generative_agents_stargazers.csv  github_data_collector.py  merge_csv.py
src/client/: App.tsx  Dashboard.module.css  Dashboard.tsx  GameRoom.tsx  main.ts  main.tsx  pixelPerfectSprite.ts  spriteHandler.ts  style.css  supabase.ts
src/client/components/: Dashboard.module.css  Dashboard.tsx  GameRoom.tsx  SpritePreviewGame.tsx
src/client/game/: PhaserGame.tsx  (+1 more)
src/npc/: ActionManager.ts  AiBrain.ts  ConversationMemory.ts  MovementController.ts  Plan.ts  SocketManager.ts  aihelper.ts  backstories.ts  backstoriesConfig.ts  brain.ts  client.ts  loghelpers.ts  memory.ts  npcConfig.ts  openai.ts  planningHelpers.ts  prompts.ts  reflect.ts
src/server/: roomConfig.ts  rooms.ts  server.ts  supabase.ts
src/shared/: config.ts  functions.ts  logger.ts  maps.ts  roomConfig.ts  supabase-types.ts  types.ts
supabase/: config.toml
supabase/migrations/: 20241205145303_rooms_and_npcs.sql  20250103181439_remote_schema.sql  20250103182012_rls.sql  20250103200606_remote_schema.sql  20250104110732_remote_schema.sql
(+522 files in other folders)
