[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["Szymon Zmyslony <szymon.zmyslony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
